Closed Bug 415326 Opened 18 years ago Closed 18 years ago

The mmap option in mprotect is set wrong in GCHeapUnix.cpp

Categories

(Tamarin Graveyard :: Garbage Collection (mmGC), defect)

Sun
Solaris
defect
Not set
normal

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: leon.sha, Assigned: leon.sha)

Details

Attachments

(1 file)

In GCHeap::SetExecuteBit the option of mprotect is PROT_READ|PROT_EXEC when executable and it is PROT_READ|PROT_WRITE|PROT_EXEC when no-executable. This is not correct.
Attached patch patchSplinter Review
Assignee: nobody → leon.sha
Status: NEW → ASSIGNED
Attachment #300991 - Flags: review?(treilly)
Attachment #300991 - Flags: review?(treilly) → review+
Checked in.
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
Resolved fixed engineering / work item that has been pushed. Setting status to verified.
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: