Bug 415326 The mmap option in mprotect is set wrong in GCHeapUnix.cpp. treilly: review+